# Fitness-AI-Agent

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  template.env
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
frontend/: assistant.py  client.py  pyproject.toml
src/agent/: main.py
src/agent/agent/: __init__.py  fitness_agent.py
src/agent/api/: chat.py  documents.py  workout.py
src/agent/backend/: prompts.py
src/agent/backend/services/: embedding_management.py
src/agent/data_model/: internal_model.py  response_data_model.py
src/agent/db/: models.py  mysql.py  seed.py
src/agent/parser/: __init__.py  workout_parser.py
src/agent/scripts/: generate_diagrams.py
src/agent/tools/: __init__.py  add_workout.py  analyze_progress.py  query_workout.py  rag_search.py
src/agent/utils/: config.py  embeddings.py  reranker.py  retriever.py  utility.py  vdb.py
tests/: conftest.py
tests/e2e_tests/: test_api.py
tests/unit_tests/: test_embedding_management.py  test_embeddings.py  test_reranker.py  test_workout_parser.py
