# ===========================
# 项目基本信息
# ===========================

[project]

# 项目名称
name = "frontend"

# 当前项目版本号
version = "0.1.0"

# 项目描述
description = "Frontend for Conversational Agent"

# 要求的 Python 最低版本
# >=3.13 表示 Python 3.13 及以上版本均可运行
requires-python = ">=3.13"

# ===========================
# 项目运行依赖
# 安装项目时会自动安装这些第三方库
# ===========================

dependencies = [

    # 日志库，用于输出格式化日志和错误信息
    "loguru>=0.7.3",

    # HTTP 请求库，用于向后端 API 发送同步请求
    "requests>=2.32.5",

    # Streamlit，用于快速搭建 Web 前端界面
    "streamlit>=1.55.0",

    # 支持异步 HTTP 请求的客户端
    # 常用于 FastAPI、异步接口调用等场景
    "httpx>=0.28.1",
]

# ===========================
# uv 包管理工具配置
# ===========================

[tool.uv]

# 开发环境依赖（仅开发阶段需要）
# 例如 pytest、black、ruff 等工具可以放在这里
# 当前为空，表示暂时没有额外的开发依赖
dev-dependencies = []